--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head><title>Pictures</title></head>
   <body>
     <h1>圖片列表</h1>
-    <img src="S_36544533.jpg" alt="紅狐補光燈折價券" />
+    <img src="./S_36544533.jpg" alt="紅狐補光燈折價券" />
   </body>
 </html>
