--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <"image":"https://daniel077-sudo.github.io/pictures/S__36544538.jpg" alt="紅狐補光燈折價券" />
 <"image":"https://daniel077-sudo.github.io/pictures/S__36544539.jpg" alt="紅狐補光燈折價券" />
 <"image":"https://daniel077-sudo.github.io/pictures/S__36544541.jpg" alt="紅狐補光燈折價券" />
+<"image":"https://daniel077-sudo.github.io/pictures/S__36544542.jpg" alt="紅狐補光燈折價券" />
+<"image":"https://daniel077-sudo.github.io/pictures/S__36544543.jpg" alt="紅狐補光燈折價券" />
 
     
   </body>
